added a new exclamation mark

--- a/hello.html
+++ b/hello.html
@@ -7,7 +7,7 @@
     <title>Abdilahi</title>
 </head>
 <body>
-    <h1>Abdilahi Omer</h1>
+    <h1>Abdilahi Omer Mubarak!</h1>
     <p>I study at Noradin</p>
     hello world
 </body>
